  * Formatted for clarity
- Improves Handling of Manual Stanza Icons
  * Optimises search for associated icons to speed loading times up
  * Only undertakes a second search scan when required
- Improves Selection Image Handling
  * Only calls scaling function when required
- Updates Default Banner Background Colour
  * Now set at 200,200,200 RGB to better match default grey


0.13.2.AD (04 May 2021):
-----------------------
- Fixes Memory Management Issues
  * Misc issues mainly introduced in v0.13.2.AA
  * Passes 'MyFreePool' pointer params by reference to ensure they can be set to a NULL value
- Fixes HiddenLegacy Handling
  * HiddenLegacy tags were not being handled when scanning for bootloaders
  * This bug was introduced in v0.13.2.AA (Commit bda56bf8)
- Fixes "DisplaySimpleMessage"
  * Messages were not actually being displayed
  * This bug was introduced in v0.13.2.AA (Commit 183e83e)
- Fixes *.icns Transparency
  * The Alpha Channel was defaulting to opaque black
  * This bug was introduced in v0.13.2.AA (Commit de49af5)
- Improves Upstream Logging Format and Coverage
  * Formatted for better readability and incorporates more key items from the native format
- Improves "ReloadGOP" Implementation
  * Generally updated and optimised
- Improves Volume Type Identification
  * Optical disc drives identified and assumption for network volumes
- Improves Detection of Previously Set NVRAM Variables
  * This helps further reduce unnecessary NVRAM writes
- Adds 'IgnoreVolumeICNS' Feature
  * Speeds booting up by not scanning for '.VolumeIcons.icns' files (not typically used)


0.13.2.AC (12 Apr 2021):
-----------------------
- Fixes memory allocation bug
  * Progam hangs when 'fold_linux_kernels' is active and Linux instances with multiple kernels are present
  * This bug was introduced in v0.13.2.AA (Commit 68c7af0)
- Fixes volume badge icon detection bug
  * ".VolumeIcon" files were not being detected as meant to be