@@ -77,11 +77,11 @@
 #include "../include/refit_call_wrapper.h"
 
 #if defined (EFIX64)
-#define DRIVER_DIRS             L"x64_drivers,drivers,drivers_x64"
+#define DRIVER_DIRS             L"drivers,drivers_x64"
 #elif defined (EFI32)
-#define DRIVER_DIRS             L"ia32_drivers,drivers,drivers_ia32"
+#define DRIVER_DIRS             L"drivers,drivers_ia32"
 #elif defined (EFIAARCH64)
-#define DRIVER_DIRS             L"aa64_drivers,drivers,drivers_aa64"
+#define DRIVER_DIRS             L"drivers,drivers_aa64"
 #else
 #define DRIVER_DIRS             L"drivers"
 #endif
