@@ -9,6 +9,8 @@
   * Only calls scaling function when required
 - Updates Default Banner Background Colour
   * Now set at 200,200,200 RGB to better match default grey
+- Align Driver and Tools Folders with Upstream
+  * Drops '{ARCH}_drivers' and '{ARCH}_tools' Folders for upstream consistency
 
 
 0.13.2.AD (04 May 2021):
